<resources>
    <string name="app_name">PracticApp</string>
    <string name="specie_character">Specie</string>
    <string name="name_character">Name</string>
    <string name="welcome">Welcome to PractiApp!</string>
    <string name="prompt_email">Email</string>
    <string name="required_email">Required email</string>
    <string name="required_name">Required name</string>
    <string name="required_password">Required password</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="must_be_equals">Passwords don\'t match</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_settings">Settings</string>
    <string name="users">Users</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dont_have_account">"Don't have an account ?"</string>
    <string name="already_have_account">"Already have an account ?"</string>
    <string name="are_you_sure">"Are you sure ?"</string>
    <string name="yes">"Yes"</string>
    <string name="cancel">"Cancel"</string>

</resources>
